cluster/webapp-vms/webapp-vms-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-vms
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    openshift.io/cluster-monitoring: 'true'
