cluster/webapp-vms/webapp-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp-vms
spec:
  selector:
    kubevirt.io/domain: webapp
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-ssh
  namespace: webapp-vms
spec:
  selector:
    kubevirt.io/domain: webapp
  ports:
    - name: ssh
      port: 22
      targetPort: 22
