cluster/webapp-vms/webapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp
  namespace: webapp-vms
spec:
  subdomain: webapp
  to:
    kind: Service
    name: webapp-login
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
